--- a/src/resources/elements/donutChart/donut-chart.scss
+++ b/src/resources/elements/donutChart/donut-chart.scss
@@ -76,8 +76,8 @@
   .poolIconContainer {
     display: none;
     position: absolute;
-    top: 38.3px;
-    left: 38.8px;
+    top: 48px;
+    left: 48px;
 
     &.interactive {
       top: 96px;
